...
    <string name="error_connection">Error connecting to server. Please check you have an active internet connection and try again.</string>
    <string name="error_connection_required">You need an active internet connection to access this page. Please turn on wifi or mobile internet connection and try again.</string>
    <string name="error_connection_ssl">Error connecting to server due to SSL problems. Please, ensure that the host in your &appName;
        server setting is correct, and that your device has the right time/date</string>
    <string name="error_installing_course">%1$s: failed to install</string>
    <string name="error_latest_already_installed">%1$s: latest version already installed</string>
    <string name="error_login">Invalid username/password\nPlease try again</string>
    <string name="error_media_app_not_found">You don\'t appear to have a media player installed which supports playing this video.</string>
    <string name="error_no_username">Please enter your username</string>
    <string name="error_processing_response">Error processing response</string>
    <string name="error_quiz_no_questions">There aren\'t any questions in this quiz.</string>
    <string name="error_register_no_email">Please enter your email address</string>
    <string name="error_register_password">Your password must be at least %1$d or more characters</string>
    <string name="error_register_password_no_match">Your passwords don\'t match</string>
    <string name="error_register_no_firstname">Please enter your first name</string>
...
