...
    android:layout_width="match_parent"
                android:fillViewport="true"
                android:layout_height="wrap_content"
                android:gravity="center">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_toolbar"
        android:paddingLeft="30dp"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/padding_medium_2"
...
